--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>레이아웃2 - 김예진</title>
-    <link rel="stylesheet" href="css/style.css"> <!-- Link Swiper's CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/style.css"> 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <style>
-    .swiper-slide img {
+    .swiper-slide img {                
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -56,6 +58,10 @@
         </nav>
 
         <a href="#" class="more"></a>
+
+        <div class="brand">
+            <p>PORSCHE</p>
+        </div>
     </header>
 
     <div class="hero">
@@ -78,7 +84,7 @@
     </div>
     </div>
     <div class="section_box">
-        <section class="section1">
+        <section class="section1"data-aos="fade-up">
             <div class="container">
                 <figure><img src="images/plogo.png" alt=""></figure>
 
@@ -153,6 +159,20 @@
             <h1><img src="images/loglo_footer.png" alt=""></h1>
     </footer>
 
+    <script src="script/jquery-3.7.1.min.js"></script>
+
+    <script>
+        // (누구를).~할 때 {실행
+        //     (누구를).보여라
+        // }
+
+        $('header .more').click(function(){
+            $('header .more').toggleClass('on')
+            $('.brand').fadeToggle()
+        })
+        
+        </script>
+
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
@@ -164,6 +184,11 @@
             prevEl: ".swiper-button-prev",
         },
     });
+    </script>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+    AOS.init();
     </script>
 </body>
 </html>
