깃허브 명령어로 올려보기

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>레이아웃2 - 김예진</title>
+    <title>레이아웃2 - 김예진1</title>
     <link rel="stylesheet" href="css/style.css"> 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Link Swiper's CSS -->
@@ -156,7 +156,7 @@
         </section>
     </div>
     <footer>
-            <h1><img src="images/loglo_footer.png" alt=""></h1>
+            <h1><img src="images/footerlogo.png" alt=""></h1>
     </footer>
 
     <script src="script/jquery-3.7.1.min.js"></script>
